--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="work-showcase-part">
                     <div class="work-show-card">
-
+                        <p>latest<br><br>work</p>
                     </div>
                     <div class="work-show-card">
 
@@ -78,7 +78,7 @@
 
                     </div>
                     <div class="work-show-card" id="second-img-digital-marketing-svs">
-
+                        <p id="latest-work-p-dm">latest<br><br>work</p>
                     </div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="work-showcase-part">
                     <div class="work-show-card" id="first-img-digital-art-svs">
-                        
+                        <p>latest<br><br>work</p>
                     </div>
                     <div class="work-show-card" id="second-img-digital-art-svs">
 
@@ -104,6 +104,52 @@
         </div>
 
     </section>
+
+    <section id="contact-section">
+        <h1>contacT mE</h1>
+
+        <div class="contact-container">
+            <div class="first-part-contact-container">
+                <h3>Ask<br>Me<br>Anything</h3>
+                <p>Got any kind of project? Big or small? Complicated or simple? Contact me and let's work toghether.</p>
+            </div>
+                <form action="submit_contact_form.php" method="action" id="contact-form">
+                    <input type="text" id="name" name="name" class="form-input" placeholder="your name..." required>
+                    <input type="email" id="email" name="email" class="form-input" placeholder="your email..." required>
+                    <textarea id="message" name="message" class="form-input" placeholder="your message..." rows="4" required></textarea>
+                    <button type="submit" class="form-btn">Send</button>
+                </form>
+        </div>
+    </section>
+
+    <footer class="footer-container">
+        <div class="first-part-footer">
+            <div class="site-map-links">
+                <a href="#">Home</a>
+                <a href="#">Contact</a>
+                <a href="#">Front End Development</a>
+                <a href="#">Digital Art</a>
+            </div>
+            <div class="legal-links">
+                <a href="#">Legal</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Cookies</a>
+            </div>
+            <div class="subscribe-to-newsletter">
+                <p>Do you want to be up to date with the latest<br>trends in any of
+                     the domains I’m active in?</p>
+                <p>Subscribe to my news letter.</p>
+                <form action="subimt_newsletter_form.php" method="action" id="subscribe-to-news">
+                    <input type="email" id="email" name="email" class="form-input" placeholder="your email..." required>
+                    <button type="submit" class="form-btn">Subscribe</button>
+                </form>
+            </div>
+        </div>
+        <div class="second-part-footer">
+            <img src="images/logo.png" alt="Hreniuc Logo">
+            <a href="#"><button id="to-top-btn">To Top</button></a>
+        </div>
+    </footer>
 
 </main>
 
