--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul class="navigation-menu">
                 <a href="#"><li>Home</li></a>
                 <a href="#"><li>Contact</li></a>
-                <a href="pages/front-end-development.html"><li>Front End Dev</li></a>
+                <a href="front-end-development.html"><li>Front End Dev</li></a>
                 <a href="#"><li>Digital Marketing</li></a>
                 <a href="#"><li>Digital Art</li></a>
             </ul>
@@ -53,7 +53,7 @@
                     <h3>Front End Development</h3>
                     <p>With over 2 years of practical experience, I can provide exceptional 
                         services of developing websites that bring, keep, and make customers.</p>
-                    <a href="pages/front-end-development.html" target="_blank"><button class="see-more-work-btn">See More</button></a>
+                    <a href="front-end-development.html" target="_blank"><button class="see-more-work-btn">See More</button></a>
                 </div>
                 <div class="work-showcase-part">
                     <div class="work-show-card">
@@ -127,7 +127,7 @@
             <div class="site-map-links">
                 <a href="#">Home</a>
                 <a href="#">Contact</a>
-                <a href="pages/front-end-development.html" target="_blank">Front End Development</a>
+                <a href="front-end-development.html" target="_blank">Front End Development</a>
                 <a href="#">Digital Art</a>
             </div>
             <div class="legal-links">
