--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <h3>Ask<br>Me<br>Anything</h3>
                 <p>Got any kind of project? Big or small? Complicated or simple? Contact me and let's work toghether.</p>
             </div>
-                <form action="submit_contact_form.php" method="action" id="contact-form">
+                <form action="submit_contact_form.php" method="post" id="contact-form">
                     <input type="text" id="name" name="name" class="form-input" placeholder="your name..." required>
                     <input type="email" id="email" name="email" class="form-input" placeholder="your email..." required>
                     <textarea id="message" name="message" class="form-input" placeholder="your message..." rows="4" required></textarea>
@@ -139,7 +139,7 @@
                 <p>Do you want to be up to date with the latest<br>trends in any of
                      the domains I’m active in?</p>
                 <p>Subscribe to my news letter.</p>
-                <form action="subimt_newsletter_form.php" method="action" id="subscribe-to-news">
+                <form action="submit_newsletter_form.php" method="action" id="subscribe-to-news">
                     <input type="email" id="email" name="email" class="form-input" placeholder="your email..." required>
                     <button type="submit" class="form-btn">Subscribe</button>
                 </form>
