--- a/front-end-development.html
+++ b/front-end-development.html
@@ -12,7 +12,7 @@
 <body>
     
     <header id="top-of-website">
-        <a href="index.html"><img src="images/logo.png" alt="Hreniuc Petrică Logo"></a>
+        <a href="index.html"><img src="/images/logo.png" alt="Hreniuc Petrică Logo"></a>
     </header>
     
     <main>
