Introducing the footer on the page front-end-development.html

--- a/front-end-development.html
+++ b/front-end-development.html
@@ -30,6 +30,36 @@
             
         </section>
 
+        <footer class="footer-container">
+        <div class="first-part-footer">
+            <div class="site-map-links">
+                <a href="#">Home</a>
+                <a href="#">Contact</a>
+                <a href="front-end-development.html" target="_blank">Front End Development</a>
+                <a href="#">Digital Art</a>
+            </div>
+            <div class="legal-links">
+                <a href="#">Legal</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Cookies</a>
+            </div>
+            <div class="subscribe-to-newsletter">
+                <p>Do you want to be up to date with the latest<br>trends in any of
+                     the domains I’m active in?</p>
+                <p>Subscribe to my news letter.</p>
+                <form action="submit_newsletter_form.php" method="action" id="subscribe-to-news">
+                    <input type="email" id="email" name="email" class="form-input" placeholder="your email..." required>
+                    <button type="submit" class="form-btn">Subscribe</button>
+                </form>
+            </div>
+        </div>
+        <div class="second-part-footer">
+            <img src="images/logo.png" alt="Hreniuc Logo">
+            <a href="#"><button id="to-top-btn">To Top</button></a>
+        </div>
+    </footer>
+
+        
     </main>
 
 
