--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
 <header id="top-of-website">
-    <img src="images/logo.png" alt="Hreniuc Petrică Logo">
+    <a href="index.html"><img src="/images/logo.png" alt="Hreniuc Petrică Logo"></a>
 </header>
 
 <main>
@@ -24,7 +24,7 @@
                 <a href="#"><li>Contact</li></a>
                 <a href="front-end-development.html"><li>Front End Dev</li></a>
                 <a href="#"><li>Digital Marketing</li></a>
-                <a href="#"><li>Digital Art</li></a>
+                <a href="digital-art.html"><li>Digital Art</li></a>
             </ul>
 
         <div class="name-and-quals">
@@ -128,7 +128,7 @@
                 <a href="#">Home</a>
                 <a href="#">Contact</a>
                 <a href="front-end-development.html" target="_blank">Front End Development</a>
-                <a href="#">Digital Art</a>
+                <a href="digital-art.html" target="_blank">Digital Art</a>
             </div>
             <div class="legal-links">
                 <a href="#">Legal</a>
