--- a/front-end-development.html
+++ b/front-end-development.html
@@ -13,7 +13,7 @@
 <body>
     
     <header id="top-of-website">
-        <a href="index.html"><img src="images/logo.png" alt="Hreniuc Petrică Logo"></a>
+        <a href="index.html"><img src="/images/logo.png" alt="Hreniuc Petrică Logo"></a>
     </header>
     
     <main>
@@ -22,8 +22,8 @@
                 <ul class="navigation-menu">
                     <a href="index.html"><li>Home</li></a>
                     <a href="#"><li>Contact</li></a>
-                    <a href="#"><li>Digital Marketing</li></a>
-                    <a href="#"><li>Digital Art</li></a>
+                    <a href="digital-marketing.html"><li>Digital Marketing</li></a>
+                    <a href="digital-art.html"><li>Digital Art</li></a>
                 </ul>
         </section>
 
