--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Readex+Pro:wght@160..700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="images/h-white-on-black-33.svg">
     <title>hreniucpetrica.ro</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
                 <a href="#"><li>Home</li></a>
                 <a href="#contact-section"><li>Contact</li></a>
                 <a href="front-end-development.html"><li>Front End Dev</li></a>
-                <a href="#"><li>Digital Marketing</li></a>
+                <a href="digital-marketing.html"><li>Digital Marketing</li></a>
                 <a href="digital-art.html"><li>Digital Art</li></a>
             </ul>
 
@@ -178,5 +179,6 @@
   </div>
 
     <script defer src="script.js"></script>
+    <script src="popupForm.js"></script>
 </body>
 </html>
