--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <p>Having done multiple projects over the years, I’ve 
                         developed skills in marketing that are imperative to 
                         any business that wants to make it.</p>
-                    <button class="see-more-work-btn">See More</button>
+                    <a href="digital-marketing.html"><button class="see-more-work-btn">See More</button></a>
                 </div>
                 <div class="work-showcase-part" id="work-part">
                     <div class="work-show-card hidden" id="first-img-digital-marketing-svs">
@@ -90,7 +90,7 @@
                     <p>Started as a hobby and passion, still is up to this date. 
                         Over 5+ years of constantly creating digital art has 
                         trained my eyes for beauty, being able to design gorgeous products.</p>
-                    <button class="see-more-work-btn">See More</button>
+                        <a href="digital-art.html"><button class="see-more-work-btn">See More</button></a>
                 </div>
                 <div class="work-showcase-part">
                     <div class="work-show-card hidden">
@@ -178,7 +178,14 @@
     </form>
   </div>
 
+  <div id="cookie-alert" class="cookie-alert">
+    <p>This website uses cookies to ensure you get the best experience. <button id="accept-cookies">Accept</button></p>
+</div>
+
+<button onclick="scrollToTop()" id="scrollTopButton" title="Go to top">To top</button>
+
     <script defer src="script.js"></script>
     <script src="popupForm.js"></script>
+    <script src="cookies.js"></script>
 </body>
 </html>
